# spdm

./: Cargo.toml  README.adoc  README.md  build.rs  config.rs.template  spdm-config-crypto.toml  spdm-config.toml
src/: config.rs  lib.rs  requester.rs  responder.rs  slot.rs  transcript.rs  vca.rs
src/crypto/: digest.rs  mod.rs  no_crypto_defaults.rs  nonce.rs  pki.rs  provider.rs  signing.rs  slot.rs
src/crypto/ring/: digest.rs  mod.rs  pki.rs  signing.rs
src/msgs/: algorithms.rs  capabilities.rs  certificates.rs  challenge.rs  common.rs  digest.rs  encoding.rs  error.rs  measurements.rs  mod.rs  version.rs
src/requester/: algorithms.rs  capabilities.rs  challenge.rs  config.rs  error.rs  id_auth.rs  responder_id_auth.rs  version.rs
src/requester/personalities/: mod.rs  vca.rs
src/responder/: algorithms.rs  capabilities.rs  challenge.rs  config.rs  error.rs  id_auth.rs  no_crypto_states.rs  requester_id_auth.rs  version.rs
test-utils/: Cargo.toml
test-utils/src/: certs.rs  lib.rs
tests/: certs.rs  protocol.rs
