[package]
name = "spdm"
version = "0.1.0"
edition = "2018"
authors = ["Andrew J. Stone <andrew@oxidecomputer.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
rand = {version = "0.8", features = ["getrandom"]}
ring = "0.16.20"
webpki = "0.22.0"

[dev-dependencies]
test-utils = { path = "test-utils" }
rcgen = "0.8.14"
