[package]
name = "spdm"
version = "0.1.0"
edition = "2018"
license = "MPL 2.0"

[features]
crypto-ring = ["ring", "webpki", "rand", "ring-compat"]

[dependencies]
bitflags = "1.3"
crypto = { version = "0.3", features = ["digest"] }
webpki = { version = "0.22.0", optional = true}
ring-compat = { version = "0.4", optional = true}
heapless = { version = "0.7.0" }
derive_more = { version = "0.99.17"}

[dependencies.ring]
version = "0.16.20"
default-features = false
optional = true

[dependencies.rand]
version = "0.8"
default-features = false
features = [ "getrandom" ]
optional = true

[dev-dependencies]
test-utils = { path = "test-utils" }
rcgen = "0.8.14"

[build-dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
thiserror = "1.0"
toml = "0.5.6"
